--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^5.0.0",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
     "sweetalert": "^2.1.2",
     "tslib": "^2.0.0",
