--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "angular-datatables": "^11.2.0",
     "bootstrap": "^5.0.0",
+    "datatables.net": "^1.10.24",
+    "datatables.net-dt": "^1.10.24",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.0.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -32,7 +35,9 @@
     "@angular-devkit/build-angular": "~0.1102.12",
     "@angular/cli": "~11.2.12",
     "@angular/compiler-cli": "~11.2.13",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.7.1",
