--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.13",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@ng-select/ng-select": "^6.1.0",
+    "@schematics/angular": "^12.0.0",
     "angular-datatables": "^11.2.0",
     "bootstrap": "^5.0.0",
     "bootstrap-select": "^1.13.18",
@@ -29,6 +30,7 @@
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "ng-bootstrap-select": "^0.5.0",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.7",
     "tslib": "^2.0.0",
